2008-12-11  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Reviewed by Eric Seidel.

        Fix typo in doctype (correct wapforum.org URL)

        * fast/wml/p-align.wml:
        * fast/wml/p-mode.wml:

2008-12-08  Dean McNamee  <deanm@chromium.org>

        Reviewed by Darin Adler.

        Always append a trailing slash when using PHP's sys_get_temp_dir().

        This allows these tests to run on Linux, where this API returns the
        directory without a trailing slash.

        * http/tests/xmlhttprequest/resources/access-control-basic-preflight-cache-invalidation.php:
        * http/tests/xmlhttprequest/resources/access-control-basic-preflight-cache-timeout.php:
        * http/tests/xmlhttprequest/resources/access-control-basic-preflight-cache.php:
        * http/tests/xmlhttprequest/resources/portabilityLayer.php:
        * http/tests/xmlhttprequest/resources/reset-temp-file.php:

2008-12-10  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Rubber-stamped by George Staikos.

        Update WML pixel test results, after adding <template> support.

        * platform/mac/fast/wml/do-shadow-expected.checksum:
        * platform/mac/fast/wml/do-shadow-expected.png:
        * platform/mac/fast/wml/do-template-expected.checksum:
        * platform/mac/fast/wml/do-template-expected.png:

2008-12-10  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Reviewed by Eric Seidel.

        Update WML test results after adding <template> support.

        * platform/mac/fast/wml/do-shadow-expected.txt:
        * platform/mac/fast/wml/do-template-expected.txt:

2008-12-10  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin

        Most of these policy delegate related tests will now pass with accompanying DRT changes.
        
        * platform/win/Skipped:  

2008-12-10  Pierre-Olivier Latour  <pol@apple.com>

        Reviewed by Darin Adler.
