@@ -1,0 +1,1 @@
+This tests that NPN_GetURLNotify works as expected and does not ASSERT intermittently in debug builds. 
